--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,54 @@ body, html {
   font-family: "Roboto", sans-serif;
 }
 
+@keyframes grow {
+  0%, 100% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  50% {
+    -webkit-transform: scaleY(1.8);
+    transform: scaleY(1.8);
+  }
+}
+@keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fill {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .main__header h1 {
   text-align: center;
 }
@@ -62,19 +110,15 @@ footer h3 {
 footer a {
   color: white;
 }
-
 footer ul {
   list-style-type: none;
 }
-
 footer ul li {
   padding: 5px 0 5px 0;
 }
-
 footer ul .fa-utensils {
   margin-right: 12px;
 }
-
 footer ul .fa-hands-helping {
   margin-right: 5px;
 }
@@ -93,14 +137,14 @@ footer ul .fa-hands-helping {
   width: 100%;
   padding: 40px 0;
 }
-
 .about h2 {
   font-weight: bold;
 }
-
 .about p {
   color: #4d4d4d;
 }
+
+
 
 .number {
   display: flex;
@@ -115,27 +159,32 @@ footer ul .fa-hands-helping {
   position: relative;
   right: 10px;
 }
-
 @media screen and (min-width: 768px) {
   .number {
     right: 0;
     top: -15px;
   }
 }
+
+
+
+
+
 @media screen and (min-width: 768px) {
   .restaurant__title {
     width: 100%;
   }
 }
+
 .restaurant__title h3 {
   padding: 30px 0px 0px 10px;
 }
-
 @media screen and (min-width: 768px) {
   .restaurant__title h3 {
     text-align: center;
   }
 }
+
 .card {
   border-radius: 25px;
   box-shadow: 4px 4px 6px #aaa;
@@ -143,12 +192,12 @@ footer ul .fa-hands-helping {
   position: relative;
   background: #fff;
 }
-
 @media screen and (min-width: 768px) {
   .card {
     width: 40%;
   }
 }
+
 .card img {
   object-fit: cover;
   border-top-left-radius: 25px;
@@ -163,7 +212,6 @@ footer ul .fa-hands-helping {
   display: flex;
   flex-direction: column;
 }
-
 @media screen and (min-width: 768px) {
   .main__restaurant {
     display: flex;
@@ -176,6 +224,7 @@ footer ul .fa-hands-helping {
     padding: 0 20%;
   }
 }
+
 .heart {
   display: flex;
   justify-content: space-between;
@@ -219,7 +268,6 @@ footer ul .fa-hands-helping {
   top: 40%;
   left: 20%;
 }
-
 @media screen and (min-width: 768px) {
   .loader__food {
     top: 40%;
@@ -232,6 +280,7 @@ footer ul .fa-hands-helping {
     left: 45%;
   }
 }
+
 .loader__food span {
   display: inline-block;
   width: 5px;
@@ -294,33 +343,34 @@ footer ul .fa-hands-helping {
     justify-content: space-around;
   }
 }
+
 .starter {
   animation: fadein 3s ease-in-out;
 }
-
 @media screen and (min-width: 1280px) {
   .starter {
     width: 400px;
   }
 }
+
 .dish {
   animation: fadein 6s ease-in-out;
 }
-
 @media screen and (min-width: 1280px) {
   .dish {
     width: 400px;
   }
 }
+
 .dessert {
   animation: fadein 9s ease-in-out;
 }
-
 @media screen and (min-width: 1280px) {
   .dessert {
     width: 400px;
   }
 }
+
 .cross {
   display: flex;
   justify-content: center;
@@ -337,7 +387,6 @@ footer ul .fa-hands-helping {
   opacity: 0;
   transition: transform 330ms ease-in-out;
 }
-
 .cross .fa-check-circle {
   color: #fff;
   transition: transform 500ms ease-in-out;
@@ -377,12 +426,13 @@ footer ul .fa-hands-helping {
   box-shadow: 4px 4px 6px #aaa;
   cursor: pointer;
 }
-
 .btn__about button:hover {
   background-color: #ae80e5;
   background-blend-mode: lighten;
   box-shadow: 4px 4px 6px #000;
 }
+
+
 
 .new {
   color: #008766;
@@ -398,7 +448,6 @@ footer ul .fa-hands-helping {
   color: black;
   cursor: pointer;
 }
-
 .fill:hover {
   animation: fill 0.3s ease-in-out;
   display: inline-block;
@@ -434,12 +483,12 @@ footer ul .fa-hands-helping {
   align-items: center;
   padding: 10px;
 }
-
 @media screen and (min-width: 1280px) {
   .menu__title {
     padding: 10px 90px;
   }
 }
+
 .meals {
   background-color: #fff;
   border-radius: 15px;
@@ -453,16 +502,13 @@ footer ul .fa-hands-helping {
   overflow: hidden;
   transition: padding-right 450ms ease-in-out;
 }
-
 .meals:hover {
   padding-right: 75px;
 }
-
 .meals:hover .cross {
   opacity: 1;
   transform: translate(-50px);
 }
-
 .meals:hover .fa-check-circle {
   transform: rotate(360deg);
 }
@@ -480,12 +526,12 @@ footer ul .fa-hands-helping {
   text-overflow: ellipsis;
   overflow: hidden;
 }
-
 @media screen and (min-width: 1280px) {
   .last__line p {
     padding-right: 20px;
   }
 }
+
 .last__line span {
   margin-right: 5px;
 }
@@ -513,7 +559,6 @@ footer ul .fa-hands-helping {
   padding: 20px;
   width: 50%;
 }
-
 @media screen and (min-width: 1280px) {
   .btn__order button {
     width: 25%;
@@ -533,11 +578,9 @@ footer ul .fa-hands-helping {
 .operation {
   margin-bottom: 50px;
 }
-
 .operation h2 {
   padding: 20px;
 }
-
 @media screen and (min-width: 1440px) {
   .operation h2 {
     text-align: center;
@@ -546,7 +589,6 @@ footer ul .fa-hands-helping {
 .operation__steps {
   list-style-type: none;
 }
-
 @media screen and (min-width: 768px) {
   .operation__steps {
     flex-wrap: wrap;
@@ -568,20 +610,16 @@ footer ul .fa-hands-helping {
   box-shadow: 1px 2px 8px 2px #c4c4c4;
   background-color: #f5f5f5;
 }
-
 .operation__steps li p {
   font-weight: 500;
   margin-left: 20px;
 }
-
 .operation__steps li:hover {
   background: #f2eafb;
 }
-
 .operation__steps li:hover .fas {
   color: #9356dc;
 }
-
 .operation__steps--number {
   background-color: #9356dc;
   color: white;
@@ -589,11 +627,10 @@ footer ul .fa-hands-helping {
   padding: 5px 9px;
   margin-left: -40px;
 }
-
 .operation__steps--icon {
   color: grey;
   font-size: 1.2rem;
   margin-left: 20px;
 }
 
-/*# sourceMappingURL=style.css.map */
+
