--- a/css/style.css
+++ b/css/style.css
@@ -87,48 +87,34 @@ body, html {
 }
 
 footer {
-  display: block;
   background-color: #353535;
-  margin: 0;
-  border: 0;
-  font-size: 100%;
-  vertical-align: baseline;
   padding: 25px;
   color: white;
 }
 
-@media screen and (min-width: 768px) {
-  footer {
-    text-align: center;
-  }
-}
-footer h3 {
+h3 {
   font-family: "Shrikhand", "sans-serif";
   padding: 5px 0 20px 0;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
-footer a {
-  color: white;
-}
-footer ul {
+ul {
   list-style-type: none;
 }
-footer ul li {
+ul li {
   padding: 5px 0 5px 0;
 }
-footer ul .fa-utensils {
-  margin-right: 12px;
-}
-footer ul .fa-hands-helping {
-  margin-right: 5px;
-}
-
-.fa-handshake {
-  transform: rotate(-45deg);
+ul li a {
+  color: white;
 }
 
 .fa-utensils {
-  padding-right: 5px;
+  margin-right: 12px;
+}
+
+.fa-hands-helping {
+  margin-right: 5px;
 }
 
 .about {
@@ -144,7 +130,19 @@ footer ul .fa-hands-helping {
   color: #4d4d4d;
 }
 
-
+.howto__title {
+  padding-left: 10px;
+}
+@media screen and (min-width: 1280px) {
+  .howto__title {
+    position: absolute;
+    top: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+  }
+}
 
 .number {
   display: flex;
@@ -166,9 +164,24 @@ footer ul .fa-hands-helping {
   }
 }
 
+.howto__icon i {
+  color: #b2b2b2;
+  margin: 0 30px;
+}
 
-
-
+@media screen and (min-width: 768px) {
+  .howto {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .howto {
+    padding: 0 20%;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .restaurant__title {
@@ -432,7 +445,31 @@ footer ul .fa-hands-helping {
   box-shadow: 4px 4px 6px #000;
 }
 
-
+.howto__button {
+  margin: 0 20px 20px 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background: #f6f6f6;
+  border: 5px solid #f6f6f6;
+  border-radius: 10px;
+  box-shadow: 4px 4px 6px #fff;
+  font-weight: bold;
+  box-shadow: 4px 4px 6px #e9e9e9;
+}
+@media screen and (min-width: 768px) {
+  .howto__button {
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .howto__button {
+    margin: 70px 0;
+  }
+}
 
 .new {
   color: #008766;
@@ -575,62 +612,4 @@ footer ul .fa-hands-helping {
   justify-content: center;
 }
 
-.operation {
-  margin-bottom: 50px;
-}
-.operation h2 {
-  padding: 20px;
-}
-@media screen and (min-width: 1440px) {
-  .operation h2 {
-    text-align: center;
-  }
-}
-.operation__steps {
-  list-style-type: none;
-}
-@media screen and (min-width: 768px) {
-  .operation__steps {
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.operation__steps li {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-  padding: 25px;
-  margin: 15px 20px 15px 30px;
-  border-radius: 20px;
-  box-shadow: 1px 2px 8px 2px #c4c4c4;
-  background-color: #f5f5f5;
-}
-.operation__steps li p {
-  font-weight: 500;
-  margin-left: 20px;
-}
-.operation__steps li:hover {
-  background: #f2eafb;
-}
-.operation__steps li:hover .fas {
-  color: #9356dc;
-}
-.operation__steps--number {
-  background-color: #9356dc;
-  color: white;
-  border-radius: 50%;
-  padding: 5px 9px;
-  margin-left: -40px;
-}
-.operation__steps--icon {
-  color: grey;
-  font-size: 1.2rem;
-  margin-left: 20px;
-}
-
-
+/*# sourceMappingURL=style.css.map */
