--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import "sass/Base/reset", "sass/Base/typography";
-@import "sass/Utils/variables", "sass/Utils/mixins","sass/Utils/keyframes", "sass/Utils/maps";
-@import "sass/Layout/header", "sass/Layout/footer", "sass/Layout/about", "sass/Layout/howto", "sass/Layout/resto", "sass/Layout/loader", "sass/Layout/menu";
-@import "sass/Components/maps", "sass/Components/btn-about", "sass/Components/howto-btn", "sass/Components/btn-card", "sass/Components/heart-icon", "sass/Components/menus-header";
+@import "Base/reset", "Base/typography";
+@import "Utils/variables", "Utils/mixins","Utils/keyframes", "Utils/maps";
+@import "Layout/header", "Layout/footer", "Layout/about", "Layout/howto", "Layout/resto", "Layout/loader", "Layout/menu";
+@import "Components/maps", "Components/btn-about", "Components/howto-btn", "Components/btn-card", "Components/heart-icon", "Components/menus-header";
