--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,19 @@
-@import "Base/reset", "Base/typography";
-@import "Utils/variables", "Utils/mixins","Utils/keyframes", "Utils/maps";
-@import "Layout/header", "Layout/footer", "Layout/about", "Layout/howto", "Layout/resto", "Layout/loader", "Layout/menu";
-@import "Components/maps", "Components/btn-about", "Components/howto-btn", "Components/btn-card", "Components/heart-icon", "Components/menus-header";
+@import "Base/reset";
+@import "Base/typography";
+@import "Utils/variables";
+@import "Utils/mixins";
+@import "Utils/keyframes";
+@import "Utils/maps";
+@import "Layout/header"; 
+@import "Layout/footer"; 
+@import "Layout/about";
+@import "Layout/howto";
+@import "Layout/resto";
+@import "Layout/loader";
+@import "Layout/menu";
+@import "Components/maps" ;
+@import "Components/btn-about" ;
+@import "Components/howto-btn" ;
+@import "Components/btn-card" ;
+@import "Components/heart-icon";
+@import "Components/menus-header";
