--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,34 +87,48 @@ body, html {
 }
 
 footer {
+  display: block;
   background-color: #353535;
+  margin: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
   padding: 25px;
   color: white;
 }
 
-h3 {
+@media screen and (min-width: 768px) {
+  footer {
+    text-align: center;
+  }
+}
+footer h3 {
   font-family: "Shrikhand", "sans-serif";
   padding: 5px 0 20px 0;
-  font-size: 1.2rem;
-  font-weight: 500;
 }
 
-ul {
+footer a {
+  color: white;
+}
+footer ul {
   list-style-type: none;
 }
-ul li {
+footer ul li {
   padding: 5px 0 5px 0;
 }
-ul li a {
-  color: white;
+footer ul .fa-utensils {
+  margin-right: 12px;
+}
+footer ul .fa-hands-helping {
+  margin-right: 5px;
+}
+
+.fa-handshake {
+  transform: rotate(-45deg);
 }
 
 .fa-utensils {
-  margin-right: 12px;
-}
-
-.fa-hands-helping {
-  margin-right: 5px;
+  padding-right: 5px;
 }
 
 .about {
@@ -130,19 +144,7 @@ ul li a {
   color: #4d4d4d;
 }
 
-.howto__title {
-  padding-left: 10px;
-}
-@media screen and (min-width: 1280px) {
-  .howto__title {
-    position: absolute;
-    top: 350px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-  }
-}
+
 
 .number {
   display: flex;
@@ -164,24 +166,9 @@ ul li a {
   }
 }
 
-.howto__icon i {
-  color: #b2b2b2;
-  margin: 0 30px;
-}
 
-@media screen and (min-width: 768px) {
-  .howto {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .howto {
-    padding: 0 20%;
-  }
-}
+
+
 
 @media screen and (min-width: 768px) {
   .restaurant__title {
@@ -445,31 +432,7 @@ ul li a {
   box-shadow: 4px 4px 6px #000;
 }
 
-.howto__button {
-  margin: 0 20px 20px 20px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  background: #f6f6f6;
-  border: 5px solid #f6f6f6;
-  border-radius: 10px;
-  box-shadow: 4px 4px 6px #fff;
-  font-weight: bold;
-  box-shadow: 4px 4px 6px #e9e9e9;
-}
-@media screen and (min-width: 768px) {
-  .howto__button {
-    margin: 20px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .howto__button {
-    margin: 70px 0;
-  }
-}
+
 
 .new {
   color: #008766;
@@ -610,6 +573,64 @@ ul li a {
 .btn__order {
   display: flex;
   justify-content: center;
+}
+
+.operation {
+  margin-bottom: 50px;
+}
+.operation h2 {
+  padding: 20px;
+}
+@media screen and (min-width: 1440px) {
+  .operation h2 {
+    text-align: center;
+  }
+}
+.operation__steps {
+  list-style-type: none;
+}
+@media screen and (min-width: 768px) {
+  .operation__steps {
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.operation__steps li {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding: 25px;
+  margin: 15px 20px 15px 30px;
+  border-radius: 20px;
+  box-shadow: 1px 2px 8px 2px #c4c4c4;
+  background-color: #f5f5f5;
+}
+.operation__steps li p {
+  font-weight: 500;
+  margin-left: 20px;
+}
+.operation__steps li:hover {
+  background: #f2eafb;
+}
+.operation__steps li:hover .fas {
+  color: #9356dc;
+}
+.operation__steps--number {
+  background-color: #9356dc;
+  color: white;
+  border-radius: 50%;
+  padding: 5px 9px;
+  margin-left: -40px;
+}
+.operation__steps--icon {
+  color: grey;
+  font-size: 1.2rem;
+  margin-left: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
